--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,10 @@
   "searchField": "Search Field",
   "searchPlaceholder": "Search...",
   "totalVisits": "Total Visits",
+  "totalVisitsThisMonth": "Total Visits in {{month}}",
   "totalQuestionsThisMonth": "Total Questions in {{month}}",
+  "totalMinutesThisMonth": "Total Minutes in {{month}}",
+  "totalMinutes": "Total Minutes",
   "selectOfficer": "Select Officer",
   "allOfficers": "All Officers",
   "officerTotalVisits": "{{officer}}'s Total Visits",
