--- a/src/locales/ur.json
+++ b/src/locales/ur.json
@@ -13,7 +13,10 @@
   "additionalQuestion": "اضافی سوال",
   "addQuestion": "سوال شامل کریں",
   "totalVisits": "کل ملاقاتیں",
+  "totalVisitsThisMonth": "{{month}} میں کل ملاقاتیں",
   "totalQuestionsThisMonth": "{{month}} میں کل سوالات",
+  "totalMinutesThisMonth": "{{month}} میں کل منٹ",
+  "totalMinutes": "کل منٹ",
   "selectOfficer": "افسر منتخب کریں",
   "allOfficers": "تمام افسران",
   "officerTotalVisits": "{{officer}} کی کل ملاقاتیں",
